--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -21,46 +21,18 @@
     #calendar { width:100%; }
     .graph-domain { display:inline-block !important; }
     .metric { font-weight:900; }
-    .year {
-        width: 100%;
-    }
+    .year { width: 100%; }
+    .yearLabel { color: #bbb; font-size: 8px; display: inline-block; float: left; width: 20px; text-align: center; margin-left: 10px; position: relative; }
+    .month { display: block; }
+    .block { height: 10px; width: 10px; float: left; margin: 0; white-space: normal; border: 0.5px solid #fff !important; font-size: 0; background-color: #efc2af;}
 
-    .yearLabel {
-        color: #bbb;
-        font-size: 8px;
-        display: inline-block;
-        float: left;
-        width: 20px;
-        text-align: center;
-        margin-left: 10px;
-        position: relative;
-    }
-
-    .month {
-        display: block;
-    }
-
-    .block {
-        height: 10px;
-        width: 10px;
-        float: left;
-        margin: 0;
-        white-space: normal;
-        border: 0.5px solid #fff !important;
-        font-size: 0;
-        background-color: #efc2af;
-    }
-
-
-/*    .block { height:1px; width:1px; float:left; margin:1px; white-space:normal; border:1px solid #C5C4CE; font-size:0; }*/
-/*    .block { height:7px; width:7px; float:left; margin:0; white-space:normal; border:0.5px solid #fff !important; font-size:0; background-color:#bbbbbb; }*/
     .confined { background-color:#f47a44; }
     .out { background-color:#ffffff; border:1px solid #000000 !important; }
     .overlap { background-color:#A59DC9; } 
-
+    .health { background-color:#7EA9CF !important; } 
+    #healthDays { color:#7EA9CF; }
     #total { color:#f47a44; }
     #consecutive, #overlapping { color:#f47a44; }
-    /*#overlapping { color:#A59DC9; }*/
 
     #legend { float:right; margin-top:10px; vertical-align:middle; }
     #legend .block { height:13px; width:13px; display:inline-block; float:none; margin-left:10px; padding-bottom:10px; margin-bottom:-3px; border:0; }
@@ -72,18 +44,12 @@
     .breaker { padding:1px; }
 
     #addendum div { display:none; }
-
     #addendum { height:18px; }
 
     .year { width:100%; }
-/*    .month { width:8.1%; border-bottom:1px solid #bbb; display:inline-block; height:11px; }
-    .month { width:8.1%; border-bottom:1px solid #bbb; display:inline-block; height:31px; }*/
-
     #topmonths .month { width:8.1%; border-bottom:0; display:inline-block; height:auto; font-size:0.6em; color:#bbb; vertical-align:top; }
 
     .step { padding:5px; }
-
-/*    .yearLabel { color:#bbb; font-size:0.6em; margin-top:-3px; margin-bottom:6px; }*/
 
 /*FANCY DROPDOWNS*/
     .wrapper-demo { width:200px; }
@@ -101,6 +67,8 @@
 
     @media (max-width:840px) { 
     #wrapper { width:100%; }
+    .wrapper-demo { width:100%; }
+    #legend, #viewSwitch { float:none !important; text-align:left; width:100%; margin-left:auto; margin-right:auto; }
     }
   </style> 
 </head>
@@ -126,13 +94,13 @@
 </section>
 </div>
 </div>
-  <div id="legend"><!-- <span class='out block'></span> not imprisoned  --> <span class='free block'></span> Imprisoned <span class='confined block'></span> Confined<!-- <span class='overlap block'></span> overlapping --> </div> 
+  <div id="legend"><!-- <span class='out block'></span> not imprisoned  --> <span class='free block'></span> Imprisoned <span class="clause"><span class='health block'></span> Mental Ward</span> <span class='confined block'></span> Confined<!-- <span class='overlap block'></span> overlapping --> </div> 
 </div>
 
 <div class="breaker"></div>
 
 <div class="chatter">
-<span id="name">Israel Musawwir</span> spent <span class='metric' id="allDays">0</span> days in prison. Nearly <span class="metric" id="pct">0</span> of his total time (<span class='metric' id="total">0</span> days) was spent in solitary confinement, with <span class='metric' id="consecutive">0</span> consecutive and <span class='metric' id="overlapping">0</span> overlapping sentences.
+<span id="name">Israel Musawwir</span> spent <span class='metric' id="allDays">0</span> days in prison. Nearly <span class="metric" id="pct">0</span> of his total time (<span class='metric' id="total">0</span> days) was spent in solitary confinement, with <span class='metric' id="consecutive">0</span> consecutive and <span class='metric' id="overlapping">0</span> overlapping sentences. <span class="clause">Of his days in isolation, <span class="metric" id="healthDays"></span> were spent in a mental health ward.</span>
 </div>
 <div id="addendum">
 <!-- <div id="more" class="chatter">He also served another <span class='metric' id="totalM">2133</span> days in solitary confinement prior to 2005.</div>
@@ -350,6 +318,8 @@ function spitCalendars(id){
 
   $(".month .block").removeClass("selectedBlock");
   $(".month .block").removeClass("out");
+  $(".month .block").removeClass("health");
+  $(".clause").hide();
 
   var startRange = [];
   var endRange = []; 
@@ -407,6 +377,61 @@ function spitCalendars(id){
     $( ".block" ).each(function() { 
       if ($(this).attr("data") < admitted) { $(this).addClass("out"); }
     });
+
+if (id == 204314){
+
+      var healthDays = 2088;
+      $(".clause").show();
+      $("#healthDays").html(d3.format(",")(healthDays));
+
+      var stint1S = new Date("April, 24, 2001"); 
+      var stint1E = new Date("May, 18, 2001"); 
+      var stint2S = new Date("September, 26, 2001"); 
+      var stint3S = new Date("October, 19, 2001"); 
+      var stint3E = new Date("November, 5, 2001"); 
+      var stint4S = new Date("April, 5, 2002"); 
+      var stint4E = new Date("April, 8, 2002"); 
+      var stint5S = new Date("April, 16, 2006"); 
+      var stint5E = new Date("September, 11, 2006"); 
+      var stint6S = new Date("January, 9, 2007"); 
+      var stint6E = new Date("July, 31, 2007"); 
+      var stint7S = new Date("September, 6, 2007"); 
+      var stint7E = new Date("October, 17, 2007"); 
+      var stint8S = new Date("October, 20, 2008"); 
+      var stint8E = new Date("November, 13, 2008");
+      var stint9S = new Date("July, 2, 2009"); 
+      var stint9E = new Date("September, 16, 2007");
+      var stint10S = new Date("May, 19, 2010"); 
+      var stint10E = new Date("December, 31, 2013"); 
+      var stint11S = new Date("January, 1, 2014"); 
+      var stint11E = new Date("March, 7, 2014"); 
+      var stint12S = new Date("April, 11, 2014"); 
+      var stint12E = new Date("August, 15, 2014"); 
+      var stint13S = new Date("October, 3, 2014"); 
+      var stint13E = new Date("October, 7, 2014");
+      var stint14S = new Date("December, 24, 2014"); 
+      var stint14E = new Date("December, 31, 2014"); 
+      var stint15S = new Date("January, 1, 2015"); 
+      var stint15E = new Date("January, 26, 2015"); 
+
+      $( ".block" ).each(function() { 
+      if ($(this).attr("data") <= stint1E.getTime() && $(this).attr("data") >= stint1S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") == stint2S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint3E.getTime() && $(this).attr("data") >= stint3S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint4E.getTime() && $(this).attr("data") >= stint4S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint5E.getTime() && $(this).attr("data") >= stint5S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint6E.getTime() && $(this).attr("data") >= stint6S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint7E.getTime() && $(this).attr("data") >= stint7S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint8E.getTime() && $(this).attr("data") >= stint8S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint9E.getTime() && $(this).attr("data") >= stint9S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint10E.getTime() && $(this).attr("data") >= stint10S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint11E.getTime() && $(this).attr("data") >= stint11S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint12E.getTime() && $(this).attr("data") >= stint12S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint13E.getTime() && $(this).attr("data") >= stint13S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint14E.getTime() && $(this).attr("data") >= stint14S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") <= stint15E.getTime() && $(this).attr("data") >= stint15S.getTime()) { $(this).addClass("health"); }
+    });
+}
 
 }
 
