--- a/20151117-police_deaths/index_page.html
+++ b/20151117-police_deaths/index_page.html
@@ -219,7 +219,7 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
     .chatterThing { text-align:left !important; height:180px; }
     .chatterThing img { margin-left:auto; margin-right:auto; }
     .switch, .bigswitch { border-radius:0 !important; width:49.% !important; }
-    #sidebar { width:100%; height:160px; text-align:center; margin-top:9px; }
+    #sidebar { width:100%; height:160px; text-align:left; margin-top:9px; }
     .card { padding:20px; height:auto !important; width:62%; display:block; }
     #method { text-align:center; }
    }
@@ -248,7 +248,7 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
     .nav-logo { width: 100%; text-align:center; }
     .nav ul>li { width: 100%; }
     .nav a.project-title {  width: 100%; }
-    .leftSide { width:100%; }
+    .leftSide { width:100%; text-align:left !important; }
     .switch, .bigswitch { border-radius:0 !important; width:48% !important; }
     .rightSide { display:none; }
     .count { font-size:1.4em; }
