--- a/20151117-police_deaths/index_page.html
+++ b/20151117-police_deaths/index_page.html
@@ -191,6 +191,8 @@ var st_page_obj = {"story_id":"380298861","title":"Fatal police encounters","pri
       
     .mobileNumbers {display:none;}  
       
+    .featherlight:before { content: ''; display: inline-block; height: 100%; vertical-align:top !important; margin-right: -0.25em; }
+
     .article-share a {color:#999 !important;}  
    @media (max-width:920px) {
        .article-headline {display:none;} 
