--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -88,6 +88,7 @@
                 <li class="step" data="213688" index="1">Sean Ellis</li>
                 <li class="step" data="208543" index="2">Cesar De la Garza</li>
                 <li class="step" data="232429" index="3">Anthony Nasseff</li>
+                <li class="step" data="226168" index="3">Medley</li>
               </ul>
           </div>
         ​</div>
@@ -343,9 +344,11 @@ function spitCalendars(id){
 
   var startblock;
   var endblock;
+  var firstRange;
 
   for (var k=1; k < startRange.length; k++){
     range += Math.round(((endRange[k].getTime()) - startRange[k].getTime())/(1000*60*60*24));
+    if (k == 1) { firstRange = range; }
 
     var startblock = "d" + startRange[k].getTime();
     var endblock = "d" + endRange[k].getTime();
