--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -88,7 +88,6 @@
                 <li class="step" data="213688" index="1">Sean Ellis</li>
                 <li class="step" data="208543" index="2">Cesar De la Garza</li>
                 <li class="step" data="232429" index="3">Anthony Nasseff</li>
-                <li class="step" data="226168" index="3">Medley</li>
               </ul>
           </div>
         ​</div>
@@ -101,7 +100,7 @@
 <div class="breaker"></div>
 
 <div class="chatter">
-<span id="name">Israel Musawwir</span> spent <span class='metric' id="allDays">0</span> days in prison. Nearly <span class="metric" id="pct">0</span> of his total time (<span class='metric' id="total">0</span> days) was spent in solitary confinement, with <span class='metric' id="consecutive">0</span> consecutive and <span class='metric' id="overlapping">0</span> overlapping sentences. <span class="clause">Of his days in isolation, <span class="metric" id="healthDays"></span> were spent in a mental health ward.</span>
+<span id="name">Israel Musawwir</span> spent <span class='metric' id="allDays">0</span> days in prison. Nearly <span class="metric" id="pct">0</span> of his total time (an estimated <span class='metric' id="total">0</span> days) was spent in solitary confinement, with <span class='metric' id="consecutive">0</span> consecutive and <span class='metric' id="overlapping">0</span> overlapping sentences. <span class="clause">Of his days in isolation, an estimated <span class="metric" id="healthDays"></span> were spent in a mental health ward.</span>
 </div>
 <div id="addendum">
 <!-- <div id="more" class="chatter">He also served another <span class='metric' id="totalM">2133</span> days in solitary confinement prior to 2005.</div>
