--- a/index_browse.html
+++ b/index_browse.html
@@ -16,7 +16,7 @@
    <style>
 /*PRIMARY*/
       ::selection { background: #ddd; }
-      body { font-family:Helvetica; overflow-x:hidden; }
+      body { font-family:Helvetica; overflow-x:hidden; margin:0 !important; padding:0 !important; }
       #leftPane { float:right !important; width:630px !important; }      
       #testDiv { height:400px; background-color:#ddd; width:85%; float:right; }
       h1 { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-weight:900; font-size:2.5em; margin-bottom:10px; }
