--- a/index_browse.html
+++ b/index_browse.html
@@ -293,9 +293,9 @@
 
 <div class="icon sort-link selected articles" id="allProjects_m"><img data="startribune" src="img/striblab.png" /></div>
 <div class="icon sort-link datadrop" id="datadrop"><img data="datadrop" src="img/datadrop.png" /></div>
-<div class="icon sort-link resources" id="resources"><img data="resources" src="img/tools.png" /></div>
-<div class="icon sort-link tools" id="tools"><img data="tools" src="img/code.png" /></div>
-<div class="icon github" id="tools"><a href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" /></a></div>
+<div class="icon sort-link" id="resources"><img data="resources" src="img/tools.png" /></div>
+<div class="icon sort-link" id="tools"><img data="tools" src="img/code.png" /></div>
+<div class="icon github" id="github"><a href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" /></a></div>
 
 </div>
 
