--- a/index_browse.html
+++ b/index_browse.html
@@ -295,7 +295,7 @@
 <div class="icon sort-link datadrop" id="datadrop"><img data="datadrop" src="img/datadrop.png" /></div>
 <div class="icon sort-link" id="resources"><img data="resources" src="img/tools.png" /></div>
 <div class="icon sort-link" id="tools"><img data="tools" src="img/code.png" /></div>
-<div class="icon github" id="github"><a href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" /></a></div>
+<a class="icon sort-link" id="tools" href="https://github.com/striblab" target="new_"><div class="icon github" id="github"><img data="github" src="img/github.png" /></a>
 
 </div>
 
