--- a/index_browse.html
+++ b/index_browse.html
@@ -274,7 +274,7 @@
 <div id="topmenu">
 <a href="http://freyhargarten.com"><button class="topbutton">Resume</button></a>
 <a href="http://striblab.github.io/startribune_dataviz"><button class="topbutton this">Articles</button></a>
-<a href="http://standardcandles.org"><button class="topbutton">Blog</button></a>
+<a href="http://datamancy.org"><button class="topbutton">Blog</button></a>
 <a href="http://deadskies.org"><button class="topbutton">Artwork</button></a>
 </div>
 <div id="socialmenu">
@@ -434,31 +434,30 @@
 
 <div id="about">
 <img src="http://freyhargarten.com/_base/img/profile.jpg" width="200px" id="profile" />
-<p>Dead Skies is the work of Frey Hargarten, a journalist, traveller, writer, artist, futurist, nerd and general pain in the ass. Opinions are mine and far too many.</p> 
-<div id="pgpkey"><a href="http://freyhargarten.com/pgp/frey.hargarten.A33572D4.pgp.asc" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4</a></div>
+<p>StribLab is the work of Frey Hargarten and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O " key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
 
 <div class="breaker"></div>
 
 <div id="linkFarm" class="footerLinks">
 <div class="linkDiv">
-<h4><img src="http://freyhargarten.com/_base/img/deadskies.png" width="50" /></h4>  
-<h4><strong><a href="http://deadskies.org">Dead Skies</a></strong></h4>
-<div class="linkage"><a href="http://jhshadowflare.deviantart.com/">DeviantArt</a> | <a href="http://jeffhargarten.tumblr.com/">Tumblr</a> | <a href="https://soundcloud.com/jeffhargarten">Soundcloud</a></div>
-</div>
-<div class="linkDiv">  
-<h4><img src="http://freyhargarten.com/_base/img/dm_logo.png" width="50" /></h4>  
-<h4><strong><a href="http://freyhargarten.com">Datamancy</a></strong></h4>
+<h4><img src="http://freyhargarten.com/_base/img/pm_logo.png" width="50" /></h4>  
+<h4><strong><a href="http://freyhargarten.com">Frey Hargarten</a></strong></h4>
 <div class="linkage"><a href="https://www.linkedin.com/in/jeffhargarten">LinkedIn</a> | <a href="https://github.com/jhargarten">Github</a></div>
 </div>
 <div class="linkDiv">
 <h4><img src="http://freyhargarten.com/_base/img/striblab.png" width="50" /></h4>  
 <h4><strong><a href="http://striblab.github.io/startribune_dataviz">StribLab</a></strong></h4>
-<a href="http://www.startribune.com/jeff-hargarten/274254381/">StarTribune</a> | <a href="http://startribune.com/local/datadrop">Data Drop</a>
+<a href="http://www.startribune.com/jeff-hargarten/274254381/">StarTribune</a> | <a href="http://startribune.com/local/datadrop">Data Drop</a> | <a href="https://muckrack.com/jeffhargarten">MuckRack</a>
+</div>
+<div class="linkDiv">  
+<h4><img src="http://freyhargarten.com/_base/img/dm_logo.png" width="50" /></h4>  
+<h4><strong><a href="http://portalmancy.org">Datamancy</a></strong></h4>
+<div class="linkage"><a href="https://twitter.com/jeffhargarten">Twitter</a> | <a href="https://www.facebook.com/jeffhargarten">Facebook</a> | <a href="https://www.instagram.com/jeffhargarten/">Instagram</a></div>
 </div>
 <div class="linkDiv">
-<h4><img src="http://freyhargarten.com/_base/img/standardcandles.jpg" width="50" /></h4>  
-<h4><strong><a href="http://portalmancy.org">Portalmancy</a></strong></h4>
-<div class="linkage"><!-- <a href="https://medium.com/@jeffhargarten">Medium</a> |  --><a href="https://twitter.com/jeffhargarten">Twitter</a> | <a href="https://www.facebook.com/jeffhargarten">Facebook</a> | <a href="https://www.instagram.com/jeffhargarten/">Instagram</a></div>
+<h4><img src="http://freyhargarten.com/_base/img/deadskies.png" width="50" /></h4>  
+<h4><strong><a href="http://deadskies.org">Dead Skies</a></strong></h4>
+<div class="linkage"><a href="http://jhshadowflare.deviantart.com/">DeviantArt</a> | <a href="http://jeffhargarten.tumblr.com/">Tumblr</a> | <a href="https://soundcloud.com/jeffhargarten">Soundcloud</a></div>
 </div>
 </div>
 
