--- a/index_browse.html
+++ b/index_browse.html
@@ -279,8 +279,8 @@
 </div>
 <div id="socialmenu">
 <div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" /></a><a href="https://github.com/jhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" /></a><a href="mailto:jeff.hargarten@startribune.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/mail.png" /></a></div>
-<div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="./_base/img/icons/striblab.png" /></a><a href="http://startribune.com/local/datadrop" target="new_"><img src="http://freyhargarten.com/_base/img/icons/datadrop.png" /></a><a href="https://muckrack.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/muckrack.png" /></a></div>
-<div><a href="http://twitter.com" target="new_"><img src="./_base/img/icons/twitter.png" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="./_base/img/icons/facebook.png" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" /></a></div>
+<div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" /></a><a href="http://startribune.com/local/datadrop" target="new_"><img src="http://freyhargarten.com/_base/img/icons/datadrop.png" /></a><a href="https://muckrack.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/muckrack.png" /></a></div>
+<div><a href="http://twitter.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" /></a></div>
 <div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" /></a></div>
 </div>
 
@@ -434,7 +434,7 @@
 
 <div id="about">
 <img src="http://freyhargarten.com/_base/img/profile.jpg" width="200px" id="profile" />
-<p>StribLab is the work of Frey Hargarten and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O " key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
+<p>StribLab is the work of Frey Hargarten and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
 
 <div class="breaker"></div>
 
