--- a/index_browse.html
+++ b/index_browse.html
@@ -251,7 +251,7 @@
      .linkDiv { width:48%; margin:5px; }
      .icon { width:19%; display:inline-block; }
      #sidebar { width:100%; text-align:center; float:none; }
-     #content { width:100%; text-align:center; float:none; }
+     #content { width:100%; text-align:left; float:none; }
      #resumebox { height:750px !important; }
      }
 
