--- a/index_browse.html
+++ b/index_browse.html
@@ -273,7 +273,7 @@
 
 <div id="topmenu">
 <a href="http://freyhargarten.com"><button class="topbutton">Resume</button></a>
-<a href="http://striblab.github.io/startribune_dataviz"><button class="topbutton this">Articles</button></a>
+<a href="http://striblab.github.io/startribune_dataviz/index_browse.html"><button class="topbutton this">Articles</button></a>
 <a href="http://datamancy.org"><button class="topbutton">Blog</button></a>
 <a href="http://deadskies.org"><button class="topbutton">Artwork</button></a>
 </div>
