--- a/index_browse.html
+++ b/index_browse.html
@@ -278,25 +278,23 @@
 <a href="http://deadskies.org"><button class="topbutton">Artwork</button></a>
 </div>
 <div id="socialmenu">
-<div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" /></a><a href="https://github.com/jhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" /></a><a href="mailto:jeff.hargarten@startribune.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/mail.png" /></a></div>
-<div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" /></a><a href="http://startribune.com/local/datadrop" target="new_"><img src="http://freyhargarten.com/_base/img/icons/datadrop.png" /></a><a href="https://muckrack.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/muckrack.png" /></a></div>
-<div><a href="http://twitter.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" /></a></div>
-<div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" /></a></div>
+<div><a href="https://www.linkedin.com/in/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/linkedin.png" alt="linkedin" /></a><a href="https://github.com/jhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/github.png" alt="github" /></a><a href="mailto:jeff.hargarten@startribune.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/mail.png" alt="mail" /></a></div>
+<div><a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/striblab.png" alt="striblab" /></a><a href="http://startribune.com/local/datadrop" target="new_"><img src="http://freyhargarten.com/_base/img/icons/datadrop.png" alt="datadrop" /></a><a href="https://muckrack.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/muckrack.png" alt="muckrack" /></a></div><div><a href="http://twitter.com" target="new_"><img src="http://freyhargarten.com/_base/img/icons/twitter.png" alt="twitter" /></a><a href="https://www.facebook.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/facebook.png" alt="facebook" /></a><a href="https://www.instagram.com/jeffhargarten/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/instagram.png" alt="instagram" /></a></div><div><a href="http://jhshadowflare.deviantart.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/deviantart.png" alt="deviantart" /></a><a href="http://jeffhargarten.tumblr.com/" target="new_"><img src="http://freyhargarten.com/_base/img/icons/tumblr.png" alt="tumblr" /></a><a href="https://soundcloud.com/jeffhargarten" target="new_"><img src="http://freyhargarten.com/_base/img/icons/soundcloud.png" alt="soundcloud" /></a></div>
 </div>
 
 <p></p>
 
-<div id="filter"><input type="search" id="filter_box" placeholder="search by keyword"></input></div>
+<div id="filter"><input type="search" id="filter_box" placeholder="search by keyword" /></div>
 
 <div id="results"></div>
 
 <div id="sidebar">
 
-<div class="icon sort-link selected articles" id="allProjects_m"><img data="startribune" src="img/striblab.png" /></div>
-<div class="icon sort-link" id="datadrop"><img src="img/datadrop.png" /></div>
-<div class="icon sort-link" id="resources"><img src="img/tools.png" /></div>
-<div class="icon sort-link" id="tools"><img src="img/code.png" /></div>
-<div class="icon github"><a class="icon sort-link" href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" /></a></div>
+<div class="icon sort-link selected articles" id="allProjects_m"><img data="startribune" src="img/striblab.png" alt="striblab" /></div>
+<div class="icon sort-link" id="datadrop"><img src="img/datadrop.png" alt="datadrop" /></div>
+<div class="icon sort-link" id="resources"><img src="img/tools.png" alt="tools" /></div>
+<div class="icon sort-link" id="tools"><img src="img/code.png" alt="code" /></div>
+<div class="icon github"><a class="icon sort-link" href="https://github.com/striblab" target="new_"><img data="github" src="img/github.png" alt="github" /></a></div>
 
 </div>
 
@@ -332,7 +330,7 @@
 </div>
 
 <div id="resourcesBlock" class="resources">
-<a href="http://journalismtools.io/tools/" target="new_"><img src="./img/jtools.png" width="100%" /></a>
+<a href="http://journalismtools.io/tools/" target="new_"><img src="./img/jtools.png" width="100%" alt="tools" /></a>
 
 <h3 id="foi">Freedom of Information</h3>
 <div id="foia">
@@ -433,11 +431,11 @@
 <div class="breaker"></div>
 
 <div id="about">
-<img src="http://freyhargarten.com/_base/img/profile.jpg" width="200px" id="profile" />
+<img src="http://freyhargarten.com/_base/img/profile.jpg" width="200" id="profile" alt="profile" />
 <p>StribLab is the work of Frey Hargarten and many talented journalists across the StarTribune newsroom. All code and public datasets are open source and free for adaption and repurposing.</p><p><a href="http://bit.ly/2dHeC2O" key="E502 A15E A8D1 8CAA 478A F1CE 13AC DE60 A335 72D4">PGP Key</a></p>
 
 <div class="breaker"></div>
-
+<!-- 
 <div id="linkFarm" class="footerLinks">
 <div class="linkDiv">
 <h4><img src="http://freyhargarten.com/_base/img/pm_logo.png" width="50" /></h4>  
@@ -461,10 +459,12 @@
 </div>
 </div>
 
-<div class="breaker"></div>
+<div class="breaker"></div> -->
+</div>
 
-<div id="footer"><span><a href="https://creativecommons.org/" target="new_"><img src="http://freyhargarten.com/_base/img/cc.large.png" width="15px" /></a></span> Star Tribune, Frey Hargarten 2016</div>
-</body>
+<div id="footer"><span><a href="https://creativecommons.org/" target="new_"><img src="http://freyhargarten.com/_base/img/cc.large.png" width="15" alt="CC" /></a></span> Star Tribune, Frey Hargarten 2016</div>
+
+</div>
 <!--close wrapper-->
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -472,7 +472,6 @@
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-530d7525029946bb"></script>
 
 <script>
-
 // $(window).on('resize', function(event){
 //     var windowWidth = $(window).width();
 // if(windowWidth < 933){
@@ -486,11 +485,6 @@
 //     $(".nav-utility-btn").text("");
 // }
 // });
-</script>
-
-<script>
-//menu magic
-
 </script>
 
 <script>
@@ -735,4 +729,5 @@ $(document).ready(function () {
       });
 
 </script>
+</body>
 </html>
