--- a/20161101-solitary/index.html
+++ b/20161101-solitary/index.html
@@ -197,7 +197,7 @@
 
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="../_common_resources/js/d3-master/d3.min.js" charset="utf-8"></script>
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
 <script>
@@ -340,25 +340,21 @@ function spitCalendars(id){
 
   var startblock;
   var endblock;
-  var firstRange;
 
   for (var k=1; k < startRange.length; k++){
     range += Math.round(((endRange[k].getTime()) - startRange[k].getTime())/(1000*60*60*24));
-    if (k == 1) { firstRange = range; }
 
     var startblock = "d" + startRange[k].getTime();
     var endblock = "d" + endRange[k].getTime();
+    
     $("#" + startblock).addClass("selectedBlock");
-    $("#" + endblock).addClass("selectedBlock");
+    $("#" + endblock).prev().addClass("selectedBlock");
 
     var $cells = $('.month .block'),
     idx_1 = $cells.index($("#" + startblock)),
     idx_2 = $cells.index($("#" + endblock));
 
-    // idx_1 = $cells.index($('.block.selectedBlock:first')),
-    // idx_2 = $cells.index($('.block.selectedBlock:last'));
-
-    $cells.slice(idx_1, idx_2 + 1).addClass('selectedBlock');
+    $cells.slice(idx_1, idx_2).addClass('selectedBlock');
   }
 
     $("#consecutive").html(d3.format(",")(cCount));
@@ -379,39 +375,40 @@ function spitCalendars(id){
 
 if (id == 204314){
 
-      var healthDays = 2115;
+      var healthDays = 2087;
       $(".clause").show();
       $("#healthDays").html(d3.format(",")(healthDays));
 
       var stint1S = new Date("April, 24, 2001"); 
-      var stint1E = new Date("May, 18, 2001"); 
+      var stint1E = new Date("May, 17, 2001"); 
       var stint2S = new Date("September, 26, 2001"); 
       var stint3S = new Date("October, 19, 2001"); 
-      var stint3E = new Date("November, 5, 2001"); 
+      var stint3E = new Date("November, 4, 2001"); 
       var stint4S = new Date("April, 5, 2002"); 
-      var stint4E = new Date("April, 8, 2002"); 
+      var stint4E = new Date("April, 7, 2002"); 
+      var stint04E = new Date("June, 13, 2002"); 
       var stint5S = new Date("April, 16, 2006"); 
-      var stint5E = new Date("September, 11, 2006"); 
+      var stint5E = new Date("September, 10, 2006"); 
       var stint6S = new Date("January, 9, 2007"); 
-      var stint6E = new Date("July, 31, 2007"); 
+      var stint6E = new Date("July, 30, 2007"); 
       var stint7S = new Date("September, 6, 2007"); 
-      var stint7E = new Date("October, 17, 2007"); 
+      var stint7E = new Date("October, 16, 2007"); 
       var stint8S = new Date("October, 20, 2008"); 
-      var stint8E = new Date("November, 13, 2008");
+      var stint8E = new Date("November, 12, 2008");
       var stint9S = new Date("July, 2, 2009"); 
-      var stint9E = new Date("September, 16, 2007");
+      var stint9E = new Date("September, 15, 2007");
       var stint10S = new Date("May, 19, 2010"); 
-      var stint10E = new Date("December, 31, 2013"); 
+      var stint10E = new Date("December, 30, 2013"); 
       var stint11S = new Date("January, 1, 2014"); 
-      var stint11E = new Date("March, 7, 2014"); 
+      var stint11E = new Date("March, 6, 2014"); 
       var stint12S = new Date("April, 11, 2014"); 
-      var stint12E = new Date("August, 15, 2014"); 
+      var stint12E = new Date("August, 14, 2014"); 
       var stint13S = new Date("October, 3, 2014"); 
-      var stint13E = new Date("October, 7, 2014");
+      var stint13E = new Date("October, 6, 2014");
       var stint14S = new Date("December, 24, 2014"); 
-      var stint14E = new Date("December, 31, 2014"); 
+      var stint14E = new Date("December, 30, 2014"); 
       var stint15S = new Date("January, 1, 2015"); 
-      var stint15E = new Date("January, 26, 2015"); 
+      var stint15E = new Date("January, 25, 2015"); 
 
       $( ".block" ).each(function() { 
       if ($(this).attr("data") <= stint1E.getTime() && $(this).attr("data") >= stint1S.getTime()) { $(this).addClass("health"); }
@@ -429,6 +426,7 @@ if (id == 204314){
       if ($(this).attr("data") <= stint13E.getTime() && $(this).attr("data") >= stint13S.getTime()) { $(this).addClass("health"); }
       if ($(this).attr("data") <= stint14E.getTime() && $(this).attr("data") >= stint14S.getTime()) { $(this).addClass("health"); }
       if ($(this).attr("data") <= stint15E.getTime() && $(this).attr("data") >= stint15S.getTime()) { $(this).addClass("health"); }
+      if ($(this).attr("data") == stint04E.getTime()) { $(this).addClass("health"); }
     });
 }
 
