--- a/index_browse.html
+++ b/index_browse.html
@@ -81,6 +81,7 @@
       .byline { font-weight:bold; float:left; } 
       .more { font-size:18px; display:block; text-align:center; }
       .date { float:right; font-family: "Benton Sans",Helvetica,Arial,sans-serif; font-size: .7em; color:#333; }
+      .articleName { font-family:"Avant Garde",Avantgarde,"Century Gothic",CenturyGothic,AppleGothic,sans-serif; font-weight:900; }
 
 /*SOCIAL*/
     .social_icons img { width:100px !important; margin:9px !important; }
